@@ -72,6 +72,10 @@ def testEnsureUnicode():
     double_u2=ensure_unicode( ensure_str(u2) )
     assert_equal(double_u2,u2)
 
+from testRecall import testRecall
+print("testRecall")
+testRecall()
+
 from testSegment import testSegment
 print("testSegment")
 testSegment()
